src/main/resources/k8s/ingress/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: 'nginx'
    nginx.ingress.kubernetes.io/use-regex: 'true'
    #nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - http:
        paths:
          - path: /meteo-station/?(.*)
            pathType: Prefix
            backend:
              service:
                name: meteo-station-cluster-ip-service
                port:
                  number: 8090
